k8s_SOD/tutorial/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
    tier: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      tier: frontend
  template:
    metadata:
      labels:
        name: nginx-pod
        tier: frontend
    spec:
      containers:
      - name: nginx
        image: nginx:1.28.0
        resources:
              limits:
                memory: '128Mi'
                cpu: '500m'
