k8s_SOD/tutorial/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: my-nginx
    tier: frontend
spec:
  containers:
  - name: nginx-pod
    image: nginx:latest
