k8s_SOD/tutorial/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx-service
    tier: frontend

spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
  selector:
    tier: frontend
